# QtJsonExample

./: .gitignore  CMakeLists.txt  ReadMe.md
cmake/: CompilerOptions.cmake  PostBuildCommand.cmake
src/: Main.cpp
src/DataType/Ball/: Ball.cpp  Ball.h
src/DataType/Box/: Box.cpp  Box.h
src/Jsonable/: JsonReadWriteable.h  JsonReadable.h  JsonWriteable.h
src/Randomizer/: Randomizer.cpp  Randomizer.h
